Fixed the overflow X on mobile desktop

--- a/src/components/Layout/MainNav/MainNav.scss
+++ b/src/components/Layout/MainNav/MainNav.scss
@@ -92,21 +92,20 @@
       height: 30rem;
       top: 100%;
       left: 50%;
-      opacity: 0;
+      transform: translateX(-50%);
       border-radius: 10px;
       padding: 2rem;
       text-align: center;
+      display: none;
     }
 
     &.active {
       .nav__mobile-content {
-        transform: translateX(-50%);
-        transition: all 0.2s ease-out;
-        opacity: 1;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         background-color: $darkViolet;
+        animation: fadeInRight 0.2s ease-out;
       }
 
       .nav__mobile-content-line {
@@ -131,5 +130,17 @@
         }
       }
     }
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(-50%);
   }
 }
